<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_page"
        android:title="@string/title_home_page" />

    <item
        android:id="@+id/navigation_graph_catalog"
        android:icon="@drawable/ic_catalog_page"
        android:title="@string/title_catalog_page" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_page"
        android:title="@string/title_cart_page" />

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_sales_page"
        android:title="@string/title_sales_page" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_page"
        android:title="@string/title_profile_page" />

</menu>