<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".presenter.activities.auth.AuthorizationActivity"

    android:orientation="vertical"
    android:gravity="center_horizontal"

    style="@style/ActivityStyle">

    <TextView
        style="@style/TitleTextViewStyle"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/LoginInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIETName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hint_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/LoginInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIETLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:prefixText="@string/rus_phone_code"

        style="@style/LoginInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIETPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"

        style="@style/ButtonStyle"
        android:backgroundTint="@color/light_pink"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/tvLoyalty_0"
        style="@style/TextViewLoyaltyPr"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/loyalty_pr_text_0" />
    <TextView
        android:id="@+id/tvLoyalty_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/TextViewLoyaltyPr"
        android:text="@string/loyalty_pr_text_1" />


</LinearLayout>